# Alzheimers

./: README.md
AIcamo/: .gitignore  USER_MANUAL.md  appdata.txt  program_files.txt  pyproject.toml  requirements.txt
AIcamo/configs/: model_config.yaml
AIcamo/scripts/: artifact_fabricator.py  generate_host_network_dataset.py  generate_synthetic_dataset.py  preprocess_data.py  preprocess_lanl.py  train_model.py  train_network_gan.py  train_tokenizer_host.py  train_tokenizer_lanl.py  train_tokenizer_synthetic.py  unified_implant.py
AIcamo/src/cyberdefense/: __init__.py
AIcamo/src/cyberdefense/data_collection/: __init__.py  event_logger.py  event_types.py
AIcamo/src/cyberdefense/generation/: __init__.py  correlation.py  event_generator.py  network_generator.py
AIcamo/src/cyberdefense/models/: __init__.py  embeddings.py  lstm_transformer.py  network_gan.py  simple_model.py  vae_gan.py
AIcamo/src/cyberdefense/network/: traffic_generator.py
AIcamo/src/cyberdefense/preprocessing/: __init__.py  data_loader.py  event_tokenizer.py  sequence_builder.py
AIcamo/src/cyberdefense/training/: __init__.py  losses.py  trainer.py
AIcamo/src/cyberdefense/utils/: __init__.py  config.py
AIcamo/src/cyberdefense/vm_automation/: __init__.py  activity_scripts.py  persona_simulator.py
Anti-Memory Forensics/: .gitignore  README.md  demo.md
Anti-Memory Forensics/Main python/: alzheimers.py
Anti-Memory Forensics/innocent/: BUILD_INSTRUCTIONS.txt  build.bat  helper.c
Memory Evasion Toolkit/: how_it_works.txt  requirements.txt
Memory Evasion Toolkit/innocent/: helper.h  (+2 more)
(+5 files in other folders)
